<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:ellipsize="end"

        android:fontFamily="casual"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/choose_game_type"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/rgRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:checkedButton="@id/rbStandard">

        <TextView
            android:id="@+id/tvRule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/choose_rule"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/standard"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbOnlySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/only_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbOnlyExtraLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/only_extra_large"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgRules"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="24dp"

        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:text="@string/player_vs_goldfish"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEasy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="@string/player_vs_sea_puppy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMedium"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/player_vs_player_connection"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGuestBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBluetooth"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/divider"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="Find Game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"/>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnHostBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBluetooth"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@id/divider"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="Host Game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"/>

</RelativeLayout>