<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:fontFamily="casual"
        android:gravity="center"
        android:maxLines="1"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCustomPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="@string/start_new_play"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCustomPlay"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="@string/captain_s_cabin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGameHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnProfile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="@string/logbook"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGameHistory"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:padding="24dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold" />
</RelativeLayout>