<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp">

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/divider"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/time_remaining"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:text="Time 00:00" />

    <TextView
        android:id="@+id/tvSmallShipCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTime"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/divider"

        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/small"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        tools:text="Small: X" />

    <TextView
        android:id="@+id/tvMediumShipCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSmallShipCounter"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/divider"

        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        tools:text="Medium: X" />

    <TextView
        android:id="@+id/tvLargeShipCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMediumShipCounter"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/divider"

        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/large"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        tools:text="Large: X" />

    <TextView
        android:id="@+id/tvExtraLargeShipCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLargeShipCounter"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/divider"

        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/extra_large"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        tools:text="Extra large: X" />

    <it.tranigrillo.battleship.view.Board
        android:id="@+id/brdMini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/divider"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:clickable="false">

    </it.tranigrillo.battleship.view.Board>

    <it.tranigrillo.battleship.view.Board
        android:id="@+id/brdMaxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvExtraLargeShipCounter"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>